# sailfish_wasm_hotreload

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: lib.rs
guest/templates/: hello.stpl
host/: Cargo.toml
host/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
