[package]
name = "guest"
version = "0.1.0"
edition = "2021"

#[target.'cfg(target_arch = "wasm32")'.lib]
#crate-type = ["cdylib"]

#[target.'cfg(not(target_arch = "wasm32"))'.lib]
#crate-type = ["lib"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
atrium-api = "0.24.7"
postcard = { version = "1.0.10", default-features = false, features = [
    "use-std",
] }
sailfish = "0.9.0"
serde = { version = "1.0.214", features = ["derive"] }
shared = { path = "../shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
extism-pdk = { version = "1.3.0", default-features = false }
